--- a/package.json
+++ b/package.json
@@ -8,15 +8,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.28.5",
+    "@types/uuid": "^8.3.3",
+    "boring-avatars": "^1.5.8",
+    "classnames": "^2.3.1",
+    "framer-motion": "^5.4.5",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.1.1",
+    "use-sound": "^4.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
+    "autoprefixer": "^10.4.0",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^3.0.0",
     "typescript": "4.5.3"
   }
 }
