--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.28.5",
+    "@types/lodash": "^4.14.178",
     "@types/uuid": "^8.3.3",
     "boring-avatars": "^1.5.8",
     "classnames": "^2.3.1",
     "framer-motion": "^5.4.5",
+    "lodash": "^4.17.21",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
